syntax = "proto3";

package auth;

option go_package = "./pb";

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc AttendEvent(AttendEventRequest) returns (AttendEventResponse) {}
  rpc UnattendEvent(UnattendEventRequest) returns (UnattendEventResponse) {}
  rpc FavouriteEvent(FavouriteEventRequest) returns (FavouriteEventResponse) {}
  rpc UnfavouriteEvent(UnfavouriteEventRequest) returns (UnfavouriteEventResponse) {}
}

// Register
message RegisterRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
}

message RegisterResponse {
  int32 status = 1;
  string message = 2;
  bool error = 3;
  string token = 4;
}

// Login
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  string message = 2;
  bool error = 3;
  string token = 4;
}

// Get User
message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  int32 status = 1;
  bool error = 2;
  string message = 3;
  string id = 4;
  string firstName = 5;
  string lastName = 6;
  string email = 7;
  string role = 8;
  repeated string favouriteEvents = 9;
  repeated string attendingEvents = 10;
}

// Favourite and unfavourite event
message FavouriteEventRequest {
  string eventId = 1;
  string token = 2;
}

message UnfavouriteEventRequest {
  string eventID = 1;
  string token = 2;
}

message FavouriteEventResponse {
  int32 status = 1;
  string message = 2;
  bool error = 3;
}

message UnfavouriteEventResponse {
  int32 status = 1;
  string message = 2;
  bool error = 3;
}

// Attend and unattend event
message AttendEventRequest {
  string eventID = 1;
  string token = 2;
}

message UnattendEventRequest {
  string eventID = 1;
  string token = 2;
}

message AttendEventResponse {
  int32 status = 1;
  string message = 2;
  bool error = 3;
}

message UnattendEventResponse {
  int32 status = 1;
  string message = 2;
  bool error = 3;
}
