syntax = "proto3";

package events;

option go_package = "./pb";

service Events {
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
  rpc FindMany(FindManyRequest) returns (FindManyResponse) {}
  rpc Add(AddRequest) returns (AddResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse) {}
}

// Event
message Location {
  string address = 1;
  string city = 2;
  string postcode = 3;
}

message Price {
  double from = 1;
  double to = 2;
}

message Event {  
  string id = 1;
  string title = 2;
  string date = 3;
  Location location = 4;
  string description = 5;
  repeated string tags = 6;
  string category = 7;
  Price price = 8;
  string createdBy = 9;
}

message FindOneRequest {
  string id = 1;
}

message FindOneResponse {
  int32 status = 1;
  bool error = 2;
  string message = 3;
  Event event = 4;
}

// Find Many
message FindManyRequest {
  repeated string categories = 1;
  repeated string cities = 2;
  repeated string tags = 3;
  repeated string createdBy = 4;
  repeated string id = 5;
  optional double priceFrom = 6;
  optional double priceTo = 7;
}

message FindManyResponse {
  int32 status = 1;
  bool error = 2;
  string message = 3;
  repeated Event events = 4;
}

// Add event
message AddRequest {
  Event event = 1;
}

message AddResponse {
  int32 status = 1;
  string message = 2;
  bool error = 3;
}

// Update event
message UpdateRequest {
  Event event = 1;
  string eventID = 2;
  string userID = 3;
  string userRole = 4;
}

message UpdateResponse {
  int32 status = 1;
  string message = 2;
  bool error = 3;
}

// Delete event
message DeleteRequest {
  string eventID = 1;
  string userID = 2;
  string userRole = 3;
}

message DeleteResponse {
  int32 status = 1;
  bool error = 2;
  string message = 3;
}

// Get event categories
message Category {
  string id = 1;
  string name = 2;
}

message GetCategoriesRequest {}

message GetCategoriesResponse {
  repeated Category categories = 1;
}